--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,8 +36,20 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+
+		<div class="buttons">
+
+			<button class="btnTous" type="button">Tous</button>
+			<button class="btnObjets" type="button">Objets</button>
+			<button class="btnAppartements" type="button">Appartements</button>
+			<button class="btnHotelsRestos" type="button">Hôtels & restaurants</button>
+
+	</div>
+
+
 		<div class="gallery">
-			<figure>
+			<!--
+				<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
 			</figure>
@@ -81,6 +93,7 @@
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
 			</figure>
+			-->
 		</div>
 	</section>
 	<section id="contact">
