--- a/FrontEnd/homePageEdit.html
+++ b/FrontEnd/homePageEdit.html
@@ -9,22 +9,32 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
+	<script src="https://kit.fontawesome.com/4cd061d277.js" crossorigin="anonymous"></script>
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
+	<div class="modeEdit">
+		<!--position: fixed le reste en scroll-->
+		<i class="fa-regular fa-pen-to-square"></i>
+		<p>Mode édition</p>
+	</div>
+
 	<header>
-		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+
+		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
-				<li>contact</li>
-				<li><a href="./login.html">login</a></li>
+				<li id="projets">projets</li>
+				<li id="contact">contact</li>
+				<li><a href="./index.html">logout</a></li>
+
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
 	</header>
+
 	<main>
 		<section id="introduction">
 			<figure>
@@ -35,23 +45,44 @@
 				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale
 					du chantier.</p>
 				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs
-					dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans
+					dans le respect de l'esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans
 					le souci du détail, le respect du planning et du budget.</p>
 				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
+			<div class="mesProjets">
+				<h2>Mes Projets</h2>
 
+				<!-- The Modal -->
+				<button class="modal-btn modal-trigger">modifier
+					<i class="fa-regular fa-pen-to-square"></i>
+				</button>
+
+			</div>
+			<div class="modal-container">
+				<div class="overlay modal-trigger"></div>
+
+				<div class="modal" role="dialog" aria-labelledby="modalTitle" aria-describedby="dialogDesc">
+					<button aria-label="close modal" class="close-modal modal-trigger">X</button>
+
+					<h1 id="modalTitle">Galerie photo</h1>
+					<div class="gallery" id="gallery"></div>
+
+					<button class="btnModalAjout" type="button">Ajouter une photo</button>
+
+				</div>
+
+			</div>
 			<div class="buttons">
 				<button class="btn active" data-category="all" type="button">Tous</button>
 				<button class="btn" data-category="objets" type="button">Objets</button>
 				<button class="btn" data-category="appartements" type="button">Appartements</button>
 				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
 			</div>
-		
+
 			<div class="gallery" id="gallery"></div>
-			
+
 
 		</section>
 
@@ -78,7 +109,10 @@
 			</ul>
 		</nav>
 	</footer>
+	<script src="./assets/js/modales.js"></script>
 	<script src="./assets/js/script.js"></script>
+	<script src="./assets/js/login.js"></script>
+
 </body>
 
 </html>
