--- a/FrontEnd/homePageEdit.html
+++ b/FrontEnd/homePageEdit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-	<div class="modeEdit">
-		<!--position: fixed le reste en scroll-->
+		<div class="modeEdit">
+		//                                   position: fixed le reste en scroll
 		<i class="fa-regular fa-pen-to-square"></i>
 		<p>Mode édition</p>
 	</div>
@@ -54,7 +54,7 @@
 			<div class="mesProjets">
 				<h2>Mes Projets</h2>
 
-				<!-- The Modal -->
+		
 				<button class="modal-btn modal-trigger">modifier
 					<i class="fa-regular fa-pen-to-square"></i>
 				</button>
@@ -115,4 +115,4 @@
 
 </body>
 
-</html>
+</html>-->
