--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -20,7 +20,7 @@
       <ul>
         <li id="projets">projets</li>
         <li id="contact">contact</li>
-        <li class="loginPage"><a href="./index.html">login</a></li>
+        <li id="loginPage"><a href="./index.html">login</a></li>
         <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
       </ul>
     </nav>
