--- a/FrontEnd/homePageEdit.html
+++ b/FrontEnd/homePageEdit.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -28,7 +28,7 @@
 			<ul>
 				<li id="projets">projets</li>
 				<li id="contact">contact</li>
-				<li><a href="./index.html">logout</a></li>
+				<li id="pageEditLogout"><a href=#>logout</a></li>
 
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
@@ -74,12 +74,12 @@
 				</div>
 
 			</div>
-			<div class="buttons">
+<!--			<div class="buttons">
 				<button class="btn active" data-category="all" type="button">Tous</button>
 				<button class="btn" data-category="objets" type="button">Objets</button>
 				<button class="btn" data-category="appartements" type="button">Appartements</button>
 				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
-			</div>
+			</div>-->
 
 			<div class="gallery" id="gallery"></div>
 
@@ -110,9 +110,10 @@
 		</nav>
 	</footer>
 	<script src="./assets/js/modales.js"></script>
+	<script src="./assets/js/homePageedit.js"></script>
 	<script src="./assets/js/script.js"></script>
-	<script src="./assets/js/login.js"></script>
+	
 
 </body>
 
-</html>-->
+</html>
