--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sophie Bluel - Architecte d'intérieur</title>
+  <title>Sophie Bluel - login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
       <ul>
         <li id="projets">projets</li>
         <li id="contact">contact</li>
-        <li id="loginPage"><a href="./index.html">login</a></li>
+        <li id="loginNav"><a href="./index.html">login</a></li>
         <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
       </ul>
     </nav>
@@ -34,13 +34,13 @@
 
       <form id="loginForm" method="POST">
         <div class="conect">
-          <label for="emailLogin">E-mail</label>
-          <input type="emailLogin" name="email" id="emailLogin" required>
+          <label for="email">E-mail</label>
+          <input type="email" name="email" id="emailLogin" required>
         </div>
 
         <div class="conect">
-          <label for="passwordLogin">Mot de passe</label>
-          <input type="password" name="passwordLogin" id="passwordLogin" required>
+          <label for="password">Mot de passe</label>
+          <input type="password" name="password" id="passwordLogin" required>
         </div>
 
         <button class="btnConect" type="submit">Se connecter</button>
@@ -67,6 +67,7 @@
   </footer>
 
 
+  <script src="./assets/js/script.js"></script>
   <script src="./assets/js/login.js"></script>
 </body>
 
