--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -50,14 +50,14 @@
 			<h2>Mes Projets</h2>
 
 			<div class="buttons">
-				<button class="btn active" data-category="all" type="button">Tous</button>
-				<button class="btn" data-category="objets" type="button">Objets</button>
-				<button class="btn" data-category="appartements" type="button">Appartements</button>
-				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
+				<button id="btnAll" class="btn active" data-category="all" type="button">Tous</button>
+				<button id="btnObjets" class="btn" data-category="objets" type="button">Objets</button>
+				<button id="btnApp" class="btn" data-category="appartements" type="button">Appartements</button>
+				<button id="btnHotelResto" class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
 			</div>
-		
-			<div class="gallery" id="gallery"></div>
 			
+
+			<div class="gallery" id="gallery"></div>
 
 		</section>
 
