--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -50,6 +50,21 @@
 			<h2>Mes Projets</h2>
 
 			<div class="buttons">
+				<button class="btn active" data-category="all" type="button">Tous</button>
+				<button class="btn" data-category="objets" type="button">Objets</button>
+				<button class="btn" data-category="appartements" type="button">Appartements</button>
+				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
+			</div>
+			
+
+			<div class="gallery" id="gallery"></div>
+
+		</section>
+
+		<!--		<section id="portfolio">
+			<h2>Mes Projets</h2>
+
+			<div class="buttons">
 				<button id="btnAll" class="btn active" data-category="all" type="button">Tous</button>
 				<button id="btnObjets" class="btn" data-category="objets" type="button">Objets</button>
 				<button id="btnApp" class="btn" data-category="appartements" type="button">Appartements</button>
@@ -59,7 +74,7 @@
 
 			<div class="gallery" id="gallery"></div>
 
-		</section>
+		</section>-->
 
 
 		<section id="contact">
