commit fo modif

--- a/FrontEnd/homePageEdit.html
+++ b/FrontEnd/homePageEdit.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-		<div class="modeEdit">
-		//                                   position: fixed le reste en scroll
+	<div class="modeEdit">
+		// position: fixed le reste en scroll
 		<i class="fa-regular fa-pen-to-square"></i>
 		<p>Mode édition</p>
 	</div>
@@ -54,7 +54,7 @@
 			<div class="mesProjets">
 				<h2>Mes Projets</h2>
 
-		
+
 				<button class="modal-btn modal-trigger">modifier
 					<i class="fa-regular fa-pen-to-square"></i>
 				</button>
@@ -74,16 +74,9 @@
 				</div>
 
 			</div>
-<!--			<div class="buttons">
-				<button class="btn active" data-category="all" type="button">Tous</button>
-				<button class="btn" data-category="objets" type="button">Objets</button>
-				<button class="btn" data-category="appartements" type="button">Appartements</button>
-				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
-			</div>-->
 
-			<div class="gallery" id="gallery"></div>
-
-
+			<div class="galleryy" id="galleryy"></div>
+// pour faire un innerHTML de gallery
 		</section>
 
 
@@ -112,7 +105,6 @@
 	<script src="./assets/js/modales.js"></script>
 	<script src="./assets/js/homePageedit.js"></script>
 	<script src="./assets/js/script.js"></script>
-	
 
 </body>
 
