--- a/FrontEnd/homePageEdit.html
+++ b/FrontEnd/homePageEdit.html
@@ -60,6 +60,7 @@
 				</button>
 
 			</div>
+			
 			<div class="modal-container">
 				<div class="overlay modal-trigger"></div>
 
@@ -67,16 +68,14 @@
 					<button aria-label="close modal" class="close-modal modal-trigger">X</button>
 
 					<h1 id="modalTitle">Galerie photo</h1>
-					<div class="gallery" id="gallery"></div>
+					<div class="galleryModale" id="galleryModale"></div>
 
 					<button class="btnModalAjout" type="button">Ajouter une photo</button>
-
 				</div>
-
 			</div>
 
-			<div class="galleryy" id="galleryy"></div>
-// pour faire un innerHTML de gallery
+			<div class="gallery" id="gallery"></div>
+
 		</section>
 
 
@@ -103,9 +102,10 @@
 		</nav>
 	</footer>
 	<script src="./assets/js/modales.js"></script>
-	<script src="./assets/js/homePageedit.js"></script>
 	<script src="./assets/js/script.js"></script>
-
+	
+	<script src="./assets/js/homePageedit.js"></script>
+	
 </body>
 
 </html>
