--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-  <title>Sophie Bluel - Architecte d'intérieur</title>
+	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,22 +15,28 @@
 
 <body>
 	<header>
+		<div id="modeEdit" class="conected">
+			<i class="fa-regular fa-pen-to-square"></i>
+			<p>Mode édition</p>
+		</div>
+
+
 		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 		<nav>
 			<ul>
 				<li>projets</li>
 				<li>contact</li>
-				<li id="loginNav"><a href="./login.html">login</a></a></li>
+				<li class="login"><a href="./login.html">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
 	</header>
 
-	
-	
+
+
 	<main id="main">
-		
-		
+
+
 
 		<section id="introduction">
 			<figure>
@@ -47,17 +53,44 @@
 			</article>
 		</section>
 		<section id="portfolio">
+			<!-- <div></div> -->
+			<button id="elementBtnModify" class="modal-btn modal-trigger">modifier
+				<i class="fa-regular fa-pen-to-square"></i>
+			</button>
+
+			<div id="modalContainer" class="modal-container">
+				<div class="overlay modal-trigger"></div>
+
+				<div class="modal" role="dialog" aria-labelledby="modalTitle" aria-describedby="dialogDesc">
+					<button aria-label="close modal" class="close-modal modal-trigger">X</button>
+
+					<h1 id="modalTitle">Galerie photo</h1>
+					
+					<div class="galleryModale" id="galleryModale"></div>
+
+					<button class="btnModalAjout" type="button">Ajouter une photo</button>
+				</div>
+			</div>
+
+			<div class="gallery" id="galleryModale"></div>
+
 			<h2>Mes Projets</h2>
 
-			<div class="buttons">
+
+
+			<div id="elementButtons" class="buttons">
 				<button class="btn active" data-category="all" type="button">Tous</button>
 				<button class="btn" data-category="objets" type="button">Objets</button>
 				<button class="btn" data-category="appartements" type="button">Appartements</button>
 				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
 			</div>
-			
+
 
 			<div class="gallery" id="gallery"></div>
+
+
+
+
 
 		</section>
 
@@ -83,6 +116,8 @@
 			</ul>
 		</nav>
 	</footer>
+
+
 	<script src="./assets/js/script.js"></script>
 </body>
 
