--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -20,7 +20,7 @@
       <ul>
         <li id="projets">projets</li>
         <li id="contact">contact</li>
-        <li id="loginNav"><a href="./index.html">login</a></li>
+        <li class="login"><a href=#>login</a></li>
         <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
       </ul>
     </nav>
@@ -35,12 +35,12 @@
       <form id="loginForm" method="POST">
         <div class="conect">
           <label for="email">E-mail</label>
-          <input type="email" name="email" id="emailLogin" required>
+          <input type="email" name="email" id="email" required>
         </div>
 
         <div class="conect">
           <label for="password">Mot de passe</label>
-          <input type="password" name="password" id="passwordLogin" required>
+          <input type="password" name="password" id="password" required>
         </div>
 
         <button class="btnConect" type="submit">Se connecter</button>
@@ -66,9 +66,12 @@
     </nav>
   </footer>
 
-
+  <script type="module" src="./assets/js/login.js"></script>
   <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/login.js"></script>
+
+
+  
+
 </body>
 
 </html>
