--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,11 +58,18 @@
 			<div id="myModal" class="modal">
 
 				<div class="modal-content">
-					<span class="close">&times;</span>
+					<div class="spanModal">
+						<span class="close">&times;</span>
+					</div>
+					
 					<h2>Galerie photo</h2>
 					<div class="galleryModale" id="galleryModale"></div>
 					<div class="line"></div>
-					<button class="btnModalAjout" type="button">Ajouter une photo</button>
+
+					<div class="deleteBtnAjoutModal">
+						<button class="btnModalAjout" type="button">Ajouter une photo</button>
+					</div>
+
 				</div>
 			</div>
 
