--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,10 +58,10 @@
 			<div id="myModal" class="modal">
 
 				<div class="modal-content">
-					<div class="spanModal">
-						<span class="close">&times;</span>
+					<div class="spans">
+						<button class="spanModal"></button>
 					</div>
-					
+						
 					<h2>Galerie photo</h2>
 					<div class="galleryModale" id="galleryModale"></div>
 					<div class="line"></div>
@@ -73,12 +73,13 @@
 				</div>
 			</div>
 
-			<button id="myBtn">
-				<i class="fa-regular fa-pen-to-square">modifier</i>
-			</button>
+			<div class="elementH2">
+				<button id="myBtn">
+					<i class="fa-regular fa-pen-to-square">modifier</i>
+				</button>
 
-			<h2>Mes Projets</h2>
-
+				<h2>Mes Projets</h2>
+			</div>
 
 			<div id="elementButtons" class="buttons">
 				<button class="btn active" data-category="all" type="button">Tous</button>
