--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -57,26 +57,18 @@
 
 			<div id="myModal" class="modal">
 
-				<div class="modal-content">
-					<div class="spans">
-						<button class="spanModal"></button>
-					</div>
-						
-					<h2>Galerie photo</h2>
-					<div class="galleryModale" id="galleryModale"></div>
-					<div class="line"></div>
 
-					<div class="deleteBtnAjoutModal">
-						<button class="btnModalAjout" type="button">Ajouter une photo</button>
-					</div>
-
-				</div>
 			</div>
 
 			<div class="elementH2">
 				<button id="myBtn">
 					<i class="fa-regular fa-pen-to-square">modifier</i>
 				</button>
+
+
+				<button id="openModal">Open Modal</button>
+
+
 
 				<h2>Mes Projets</h2>
 			</div>
