commit for mentor

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,7 +21,6 @@
 			<p>Mode édition</p>
 		</div>
 
-
 		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 		<nav>
 			<ul>
@@ -33,11 +32,7 @@
 		</nav>
 	</header>
 
-
-
 	<main id="main">
-
-
 
 		<section id="introduction">
 			<figure>
@@ -55,20 +50,12 @@
 		</section>
 		<section id="portfolio">
 
-			<div id="myModal" class="modal">
-
-
-			</div>
+			<div id="myModal" class="modal"></div>
 
 			<div class="elementH2">
 				<button id="myBtn">
 					<i class="fa-regular fa-pen-to-square">modifier</i>
 				</button>
-
-
-				<button id="openModal">Open Modal</button>
-
-
 
 				<h2>Mes Projets</h2>
 			</div>
@@ -80,12 +67,7 @@
 				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
 			</div>
 
-
 			<div class="gallery" id="gallery"></div>
-
-
-
-
 
 		</section>
 
@@ -100,9 +82,9 @@
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				<input type="submit" value="Envoyer">
-
 			</form>
 		</section>
+		
 	</main>
 
 	<footer>
@@ -112,7 +94,6 @@
 			</ul>
 		</nav>
 	</footer>
-
 	
 	<script src="./assets/js/script.js"></script>
 	
