all functions ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,8 +21,8 @@
 			<p>Mode édition</p>
 		</div>
 
-		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
-		<nav>
+		<h1 class="h1">Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+		<nav class="navHeader">
 			<ul>
 				<li>projets</li>
 				<li>contact</li>
@@ -87,7 +87,7 @@
 		
 	</main>
 
-	<footer>
+	<footer id="footer">
 		<nav>
 			<ul>
 				<li>Mentions Légales</li>
