--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,8 +53,8 @@
 			<div id="myModal" class="modal"></div>
 
 			<div class="elementH2">
-				<button id="myBtn">
-					<i class="fa-regular fa-pen-to-square">modifier</i>
+				<button class="myBtn" id="myBtn">modifier
+					<i class="fa-regular fa-pen-to-square"></i>
 				</button>
 
 				<h2>Mes Projets</h2>
