--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,12 +40,16 @@
 			</figure>
 			<article>
 				<h2>Designer d'espace</h2>
-				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale
+				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
+					finale
 					du chantier.</p>
-				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs
-					dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans
+				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les
+					couleurs
+					dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera
+					assuré dans
 					le souci du détail, le respect du planning et du budget.</p>
-				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG,
+					décorateur(trice)</p>
 			</article>
 		</section>
 		<section id="portfolio">
@@ -62,9 +66,6 @@
 
 			<div id="elementButtons" class="buttons">
 				<button class="btn active" data-category="all" type="button">Tous</button>
-				<button class="btn" data-category="objets" type="button">Objets</button>
-				<button class="btn" data-category="appartements" type="button">Appartements</button>
-				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
 			</div>
 
 			<div class="gallery" id="gallery"></div>
@@ -84,7 +85,7 @@
 				<input type="submit" value="Envoyer">
 			</form>
 		</section>
-		
+
 	</main>
 
 	<footer id="footer">
@@ -94,9 +95,23 @@
 			</ul>
 		</nav>
 	</footer>
-	
+
+	<div class="modals">
+		<div class="modal-content">
+			<div class="divSpanModal">
+				<span class="close-btn ">&times;</span>
+			</div>
+			<h2 class="modal-title">Galerie photo</h2>
+			<div id="galleryModale"></div>
+			<button class="btnModalAjout">Ajouter une photo</button>
+		</div>
+
+	</div>
+
+
+
 	<script src="./assets/js/script.js"></script>
-	
+
 </body>
 
 </html>
