--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<script src="https://kit.fontawesome.com/4cd061d277.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
@@ -40,16 +39,12 @@
 			</figure>
 			<article>
 				<h2>Designer d'espace</h2>
-				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
-					finale
+				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale
 					du chantier.</p>
-				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les
-					couleurs
-					dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera
-					assuré dans
+				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs
+					dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans
 					le souci du détail, le respect du planning et du budget.</p>
-				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG,
-					décorateur(trice)</p>
+				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 			</article>
 		</section>
 		<section id="portfolio">
@@ -66,6 +61,9 @@
 
 			<div id="elementButtons" class="buttons">
 				<button class="btn active" data-category="all" type="button">Tous</button>
+				<button class="btn" data-category="objets" type="button">Objets</button>
+				<button class="btn" data-category="appartements" type="button">Appartements</button>
+				<button class="btn" data-category="hotels-restos" type="button">Hôtels & restaurants</button>
 			</div>
 
 			<div class="gallery" id="gallery"></div>
@@ -85,7 +83,7 @@
 				<input type="submit" value="Envoyer">
 			</form>
 		</section>
-
+		
 	</main>
 
 	<footer id="footer">
@@ -95,23 +93,9 @@
 			</ul>
 		</nav>
 	</footer>
-
-	<div class="modals">
-		<div class="modal-content">
-			<div class="divSpanModal">
-				<span class="close-btn ">&times;</span>
-			</div>
-			<h2 class="modal-title">Galerie photo</h2>
-			<div id="galleryModale"></div>
-			<button class="btnModalAjout">Ajouter une photo</button>
-		</div>
-
-	</div>
-
-
-
+	
 	<script src="./assets/js/script.js"></script>
-
+	
 </body>
 
 </html>
